# silly_kernel

./: .gitignore  Cargo.toml  shell.nix  x86_64-silly_os.json
.cargo/: config.toml
main/: Cargo.toml
main/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
vga_buffer/: Cargo.toml
vga_buffer/src/: lib.rs
