[workspace]
members = ["main",  "vga_buffer"]
resolver = "2"

[workspace.dependencies]
bootloader = "0.9.1"
volatile = "0.2.6"
lazy_static = "1.4.0"
spin = "0.5.2"
x86_64 = "0.15.2"
vga_buffer = { path = "vga_buffer" }

[workspace.package.metadata.bootimage]
test-args = []
test-success-exit-code = 33
